# test-django-rest-framework

./: LICENSE  README.md  docker-compose.yaml  pyproject.toml
myserver/: settings.py  urls.py
shell/: dc.sh
