[tool.poetry]
name = "test-django-rest-framework"
version = "0.1.0"
description = ""
authors = ["keewoong nam <keewoong.nam@flicspy.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
djangorestframework = "^3.13.1"
Markdown = "^3.4.1"
django-filter = "^22.1"
mysqlclient = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
